// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when editing a monitor 1`] = `
<div
  className="src-modules-monitor-components-collection__container"
>
  <EntitySectionHeading>
    The Title
  </EntitySectionHeading>
  <div
    className="src-modules-monitor-components-collection__monitors-container"
  >
    <Grid>
      <gridRowComponent
        key="key-2"
        monitor={
          Object {
            "isIgnored": false,
            "key": "key-2",
          }
        }
        onEdit={[Function]}
        venueHomepageUrl="/some/url"
      />
    </Grid>
  </div>
  <div
    className="src-modules-monitor-components-collection__buttons-container"
  >
    <Button
      onClick={[Function]}
      type="button"
    >
      Show ignored monitors
    </Button>
  </div>
  <Modal
    aria-label="Edit Monitor"
    backdropTransition={[Function]}
    onHide={[Function]}
    show={true}
    transition={[Function]}
  >
    <ModalContainer
      dismissable={true}
      onHide={[Function]}
      title="Edit Monitor"
      type="wide"
    >
      <ReduxForm
        initialValues={
          Object {
            "isIgnored": false,
            "key": "key-2",
          }
        }
        onSubmit={[Function]}
      />
    </ModalContainer>
  </Modal>
</div>
`;

exports[`should render correctly when get in not in progress and there are no monitors 1`] = `
<div
  className="src-modules-monitor-components-collection__container"
>
  <EntitySectionHeading>
    The Title
  </EntitySectionHeading>
  <div
    className="src-modules-monitor-components-collection__monitors-container"
  >
    <p
      className="src-modules-monitor-components-collection__no-monitors"
    >
      No Monitors Found
    </p>
  </div>
  <Modal
    aria-label="Edit Monitor"
    backdropTransition={[Function]}
    onHide={[Function]}
    show={false}
    transition={[Function]}
  >
    <ModalContainer
      dismissable={true}
      onHide={[Function]}
      title="Edit Monitor"
      type="wide"
    >
      <ReduxForm
        initialValues={null}
        onSubmit={[Function]}
      />
    </ModalContainer>
  </Modal>
</div>
`;

exports[`should render correctly when get is in progress 1`] = `
<div
  className="src-modules-monitor-components-collection__container"
>
  <EntitySectionHeading>
    The Title
  </EntitySectionHeading>
  <div
    className="src-modules-monitor-components-collection__monitors-container"
  >
    <Loader
      size="large"
      type="default"
    />
  </div>
  <Modal
    aria-label="Edit Monitor"
    backdropTransition={[Function]}
    onHide={[Function]}
    show={false}
    transition={[Function]}
  >
    <ModalContainer
      dismissable={true}
      onHide={[Function]}
      title="Edit Monitor"
      type="wide"
    >
      <ReduxForm
        initialValues={null}
        onSubmit={[Function]}
      />
    </ModalContainer>
  </Modal>
</div>
`;

exports[`should render correctly when not showing ignored monitors 1`] = `
<div
  className="src-modules-monitor-components-collection__container"
>
  <EntitySectionHeading>
    The Title
  </EntitySectionHeading>
  <div
    className="src-modules-monitor-components-collection__monitors-container"
  >
    <Grid>
      <gridRowComponent
        key="key-2"
        monitor={
          Object {
            "isIgnored": false,
            "key": "key-2",
          }
        }
        onEdit={[Function]}
        venueHomepageUrl="/some/url"
      />
      <gridRowComponent
        key="key-4"
        monitor={
          Object {
            "inArtfully": false,
            "isIgnored": false,
            "key": "key-4",
          }
        }
        onEdit={[Function]}
        venueHomepageUrl="/some/url"
      />
      <gridRowComponent
        key="key-6"
        monitor={
          Object {
            "hasChanged": true,
            "inArtfully": true,
            "isIgnored": false,
            "key": "key-6",
          }
        }
        onEdit={[Function]}
        venueHomepageUrl="/some/url"
      />
    </Grid>
  </div>
  <div
    className="src-modules-monitor-components-collection__buttons-container"
  >
    <Button
      onClick={[Function]}
      type="button"
    >
      Show ignored monitors
    </Button>
  </div>
  <Modal
    aria-label="Edit Monitor"
    backdropTransition={[Function]}
    onHide={[Function]}
    show={false}
    transition={[Function]}
  >
    <ModalContainer
      dismissable={true}
      onHide={[Function]}
      title="Edit Monitor"
      type="wide"
    >
      <ReduxForm
        initialValues={null}
        onSubmit={[Function]}
      />
    </ModalContainer>
  </Modal>
</div>
`;

exports[`should render correctly when showing ignored monitors 1`] = `
<div
  className="src-modules-monitor-components-collection__container"
>
  <EntitySectionHeading>
    The Title
  </EntitySectionHeading>
  <div
    className="src-modules-monitor-components-collection__monitors-container"
  >
    <Grid>
      <gridRowComponent
        key="key-1"
        monitor={
          Object {
            "isIgnored": true,
            "key": "key-1",
          }
        }
        onEdit={[Function]}
        venueHomepageUrl="/some/url"
      />
      <gridRowComponent
        key="key-2"
        monitor={
          Object {
            "isIgnored": false,
            "key": "key-2",
          }
        }
        onEdit={[Function]}
        venueHomepageUrl="/some/url"
      />
    </Grid>
  </div>
  <div
    className="src-modules-monitor-components-collection__buttons-container"
  >
    <Button
      onClick={[Function]}
      type="button"
    >
      Hide ignored monitors
    </Button>
  </div>
  <Modal
    aria-label="Edit Monitor"
    backdropTransition={[Function]}
    onHide={[Function]}
    show={false}
    transition={[Function]}
  >
    <ModalContainer
      dismissable={true}
      onHide={[Function]}
      title="Edit Monitor"
      type="wide"
    >
      <ReduxForm
        initialValues={null}
        onSubmit={[Function]}
      />
    </ModalContainer>
  </Modal>
</div>
`;
